26-Ingress/3-ingress-app-webcolor-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-webcolor-1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Proxy to orange when the request is EXACT the root path
      - backend:
          service:
            name: svc-app-webcolor-dark
            port:
              number: 9000
        path: /
        pathType: Exact
