26-Ingress/6-ingress-app-webcolor-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-webcolor-3
  annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "blue.com"
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: svc-app-webcolor-blue
            port:
              number: 9000
  - host: "green.com"
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: svc-app-webcolor-green
            port:
              number: 9000
