26-Ingress/ingress-app-webcolor2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #  nginx.ingress.kubernetes.io/rewrite-target: /
    #  nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #  nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-app-webcolor2
spec:
  defaultBackend:
    service:
      name: svc-app-webcolor-yellow
      port:
        number: 9000
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Proxy to orange when the request is EXACT the root path
      - backend:
          service:
            name: svc-app-webcolor-orange
            port:
              number: 9000
        path: /
        pathType: Exact
      # - backend:
      #     service:
      #       name: svc-app-webcolor-blue
      #       port:
      #         number: 9000
      #   path: /blue
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: svc-app-webcolor-green
      #       port:
      #         number: 9000
      #   path: /green
      #   pathType: Prefix
